Tablet mode nav z-index fix

--- a/css/main.scss
+++ b/css/main.scss
@@ -114,6 +114,7 @@ nav.mobile {
   bottom: 0;
   width: 100%;
   box-shadow: 4px 0 10px #000000;
+  z-index: 10;
 
   a {
     color: white;
